[package]
name = "blitz-deploy"
version = "0.1.0"
edition = "2024"
license = "EUPL-1.2"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
hostname = "0.4.2"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ureq = { version = "3.3.0", features = ["json"] }
urlencoding = "2.1.3"
